<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyApp</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="username">User Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="sign_up_link">You don\'t have an account? Sign up here!</string>
    <string name="login_in_link">Go back to Login-Screen!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_save_user">SaveUserActivity</string>

</resources>
