<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".SignUpActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2d2d2d"
        android:paddingBottom="@dimen/activity_padding"
        android:paddingLeft="@dimen/activity_padding"
        android:paddingRight="@dimen/activity_padding"
        android:paddingTop="@dimen/activity_padding" >
        
        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@layout/header_gradient"
            android:paddingBottom="@dimen/activity_padding"
            android:paddingTop="@dimen/activity_padding" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin"
                android:contentDescription="@string/signup"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="@string/signup"
                android:textColor="#ede9ff"
                android:textSize="26sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" >

            <TextView
                android:id="@+id/tv_login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/login_in_link"
                android:textColor="#ede9ff"
                android:textSize="14sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/footer"
            android:layout_below="@+id/header"
            android:paddingBottom="@dimen/activity_padding"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:paddingTop="@dimen/activity_padding" >

            <EditText
                android:id="@+id/et_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="30dp"
                android:hint="@string/firstname"
                android:textColor="#ede9ff"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>
            
            <EditText
                android:id="@+id/et_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_below="@+id/et_firstname"
                android:hint="@string/lastname"
                android:textColor="#ede9ff"
                android:inputType="textPersonName" />
            
            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_below="@+id/et_lastname"
                android:hint="@string/username"
                android:textColor="#ede9ff"
                android:inputType="textPersonName" />
            
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_below="@+id/et_username"
                android:hint="@string/email"
                android:textColor="#ede9ff"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email"
                android:hint="@string/password"
                android:textColor="#ede9ff"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:background="#2c436f"
                android:text="@string/signup"
                android:textColor="#ede9ff" />
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>